# agent_foundry

./: .gitignore  LICENSE  README.md  pyproject.toml  ref-README.md
.claude/: settings.local.json
examples/: agui_server.py  basic_agent.py
src/agent_foundry/: __init__.py  constants.py  factory.py  master_agent.py  runtime.py  schemas.py  server.py  subagent_tool.py
src/agent_foundry/agui/: __init__.py  adapter.py  encoding.py  ids.py
src/agent_foundry/config/: settings.py
src/agent_foundry/llm/: __init__.py  factory.py
src/agent_foundry/tools/: __init__.py  registry.py
tests/: test_e2e.py
