[project]
name = "agent-foundry"
version = "0.1.0"
description = "自然语言方式打造agent"
readme = "README.md"
requires-python = "~=3.12.8"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi[standard]>=0.128.0",
    "ag-ui-protocol>=0.1.10,<0.2.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
]


[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]


[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(filename)s [line:%(lineno)d] - %(message)s"
log_cli_date_format = "%H:%M:%S"


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
include = ["src/**/*.py"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]
preview = true

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "TID252",  #Disallow relative imports.
    "PLC0415", #import-outside-top-level
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]
